# incentive_management

./: README.md  pyproject.toml
incentive_management/: hooks.py  modules.txt
incentive_management/config/: desktop.py  docs.py
incentive_management/incentive_management/: task.py
incentive_management/incentive_management/dashboard_chart/status_wise_swayam_sevika/: status_wise_swayam_sevika.json
incentive_management/incentive_management/doctype/agent_enable_disable/: agent_enable_disable.js  agent_enable_disable.json  agent_enable_disable.py  test_agent_enable_disable.py
incentive_management/incentive_management/doctype/agents/: agents.js  agents.json  agents.py  test_agents.py
incentive_management/incentive_management/doctype/disabled_agents_ss_data/: disabled_agents_ss_data.js  disabled_agents_ss_data.json  disabled_agents_ss_data.py  test_disabled_agents_ss_data.py
incentive_management/incentive_management/doctype/my_swayam_sevika/: my_swayam_sevika.js  my_swayam_sevika.json  my_swayam_sevika.py  test_my_swayam_sevika.py
incentive_management/incentive_management/doctype/rejected_records/: rejected_records.js  rejected_records.json  rejected_records.py  test_rejected_records.py
incentive_management/incentive_management/doctype/swayam_sevika/: swayam_sevika.js  swayam_sevika.json  swayam_sevika.py  test_swayam_sevika.py
incentive_management/incentive_management/doctype/swayam_sevika_data/: swayam_sevika_data.js  swayam_sevika_data.json  swayam_sevika_data.py  swayam_sevika_data_list.js  test_swayam_sevika_data.py
(+12 files in other folders)
